argocd-apps/kantraformation/frontend/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kantraformation-front
  namespace: kantraformation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kantraformation-front
  template:
    metadata:
      labels:
        app: kantraformation-front
    spec:
      containers:
        - name: kantraformation-front
          image: rakizouari/kantrafrontend:1.0.2
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi

      imagePullSecrets:
        - name:  dockerhub-pull-secret
      restartPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
