argocd-apps/kantraformation/frontend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kantraformation 
spec:
  type: ClusterIP
  selector:
    app: kantraformation
  ports:
  - name: httpport
    port: 80
    protocol: TCP
    targetPort: 80
