argocd-apps/kantraformation/frontend/Ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kantraformation-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kantraformation-redirectscheme@kubernetescrd
spec:
  rules:
  - host: "kantraformation.9antra.tn"
    http:
      paths:
      - backend:
          service:
            name: 'kantraformation'
            port:
              number: 80
        path: /
        pathType: Prefix
# Backend Rules
      - backend:
          service:
            name: 'kantraformation'
            port:
              number: 8094
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: 'kantraformation'
            port:
              number: 8094
        path: /ws
        pathType: Prefix
