argocd-apps/kantraformation/frontend/Ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kantraformation-https
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
  - host: "kantraformation.k3s.9antra.tn"
    http:
      paths:
# Frontend Rules
      - backend:
          service:
            name: 'kantraformation'
            port:
              number: 80
        path: /
        pathType: Prefix
# Backend Rules
      - backend:
          service:
            name: 'kantraformationb'
            port:
              number: 8094
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: 'kantraformation'
            port:
              number: 8094
        path: /ws
        pathType: Prefix
  tls:
  - hosts:
    - "kantraformation.9antra.tn"
    secretName: kantraformation-k3s-tls
